Fixed alignment of logo and button

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ h2 {
     #logo-wrapper {
         align-items: center;
         justify-content: flex-start;
-        padding-top: 76px;
+        padding-top: 125px;
     }
 }
 
